--- a/nextstore/src/styles/MyOrder.module.scss
+++ b/nextstore/src/styles/MyOrder.module.scss
@@ -10,7 +10,8 @@
   top: 60px;
   bottom: 0;
   border-radius: 6px;
-  border: 1px solid $--very-light-pink;;
+  border: 1px solid $--very-light-pink;
+  z-index: 1;
 }
 .title-container {
   display: flex;
